# StegaDNA

./: .gitignore  README.md  demo_steganography.py  docker-compose.yml  hf_readme.md  main.py  pyproject.toml  research.md  techdoc.md  train_stegastamp.sh  upload_hf.py
.agent/rules/: dna-rules.md
model/: README.md
mojo_core/: ecc.mojo  main.mojo  processing.mojo
scripts/: cleanup_checkpoints.py  cleanup_wandb.py  excision_wandb.py  final_wandb_cleanup.py  inspect_wandb.py  purge_checkpoints.py
server/: app.py  bridge.py
server/static/: index.html
src/: eval.py  eval_quick.py  train.py
src/data/: loader.py
src/engines/: audio.py  image.py  text.py
src/models/: audio_engine.py  neural_engine.py  text_engine.py
tests/: attack_sim.py  test_api.py
